<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="btn_add_languages">Select language</string>
	<string name="btn_add_languages_verical">Select language</string>
	<string name="toast_nothing_todo">Nothing to translate</string>
	<!-- Preferences -->
	<string name="prefs_experimental_title">Experimental</string>
	<string name="pref_select_api_title">Google Translate™ API v2</string>
	<string name="pref_select_api_summary">It\'s a *labs* feature and may not work</string>

	<string name="pref_strip_url_title">Strip URL\'s</string>
	<string name="pref_strip_url_summary">Remove http links to improve language recognition</string>
	
	<string name="pref_select_languages">Languages</string>
	<string name="pref_select_languages_title">Your languages</string>
	<string name="pref_select_languages_summary">Select language you understand</string>
	<string name="prefs_analytics_title">Statistics</string>
	<string name="prefs_analytics_on">true</string>
	<string name="prefs_analytics_on_title">Google Analytics</string>
	<string name="prefs_analytics_on_summary">Please help us to improve this application</string>
	<!-- -->
	<string name="dialog_connectivity_title">No Internet connection</string>
	<string name="dialog_connectivity_message">Translate Intent uses Google Translate API.\nPlease enable Internet connection.</string>
	
	<!--  -->
	<string name="app_instruction">1) Select languages you understand.\n2) Use \"Share\" function to send text from other application, e.g. Twitter, to this one.\n3) Push the desired language button to translate.\n4) Enjoy!
	</string>
	<!-- 	 -->
	<string name="local_service_started">local_service_started</string>
	<string name="local_service_label">local_service_label</string>
	<string name="local_service_connected">local_service_connected</string>
	<string name="local_service_disconnected">local_service_disconnected</string>
	<!--  -->
	<string name="service_name">Translate Service</string>
	<!--  -->
	<string name="app_name">Translate Intent</string>
	<string name="template_user_agent">"%1$s/%2$s (Linux; Android)"</string>
	<!-- Menu -->
	<string name="settings_title">Settings</string>
	<string name="share_title">Share</string>
	<!-- languages -->
	<string name="lang_af">Afrikaans</string>
	<string name="lang_sq">Albanian</string>
	<string name="lang_ar">Arabic</string>
	<string name="lang_eu">Basque</string>
	<string name="lang_be">Belarusian</string>
	<string name="lang_bg">Bulgarian</string>
	<string name="lang_ca">Catalan</string>
	<string name="lang_zh_CN">Chinese Simplified</string>
	<string name="lang_zh_TW">Chinese Traditional</string>
	<string name="lang_hr">Croatian</string>
	<string name="lang_cs">Czech</string>
	<string name="lang_da">Danish</string>
	<string name="lang_nl">Dutch</string>
	<string name="lang_en">English</string>
	<string name="lang_et">Estonian</string>
	<string name="lang_tl">Filipino</string>
	<string name="lang_fi">Finnish</string>
	<string name="lang_fr">French</string>
	<string name="lang_gl">Galician</string>
	<string name="lang_de">German</string>
	<string name="lang_el">Greek</string>
	<string name="lang_ht">Haitian Creole</string>
	<string name="lang_iw">Hebrew</string>
	<string name="lang_hi">Hindi</string>
	<string name="lang_hu">Hungarian</string>
	<string name="lang_is">Icelandic</string>
	<string name="lang_id">Indonesian</string>
	<string name="lang_ga">Irish</string>
	<string name="lang_it">Italian</string>
	<string name="lang_ja">Japanese</string>
	<string name="lang_lv">Latvian</string>
	<string name="lang_lt">Lithuanian</string>
	<string name="lang_mk">Macedonian</string>
	<string name="lang_ms">Malay</string>
	<string name="lang_mt">Maltese</string>
	<string name="lang_no">Norwegian</string>
	<string name="lang_fa">Persian</string>
	<string name="lang_pl">Polish</string>
	<string name="lang_pt">Portuguese</string>
	<string name="lang_ro">Romanian</string>
	<string name="lang_ru">Russian</string>
	<string name="lang_sr">Serbian</string>
	<string name="lang_sk">Slovak</string>
	<string name="lang_sl">Slovenian</string>
	<string name="lang_es">Spanish</string>
	<string name="lang_sw">Swahili</string>
	<string name="lang_sv">Swedish</string>
	<string name="lang_th">Thai</string>
	<string name="lang_tr">Turkish</string>
	<string name="lang_uk">Ukrainian</string>
	<string name="lang_vi">Vietnamese</string>
	<string name="lang_cy">Welsh</string>
	<string name="lang_yi">Yiddish</string>
</resources>
